# cryterion

./: LICENSE  README.md  cryterion.py  pyproject.toml
