[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cryterion"
version = "0.0.1"
authors = [{ name = "virinci" }]
description = "A crypto benchmarking library in Python."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/virinci/cryterion"
